[package]
name = "maxtract"
version = "0.1.0"
authors = ["Joshua Meranda <joshmeranda@gmail.com>"]
edition = "2018"
description = "A command line tool for extracting information from websites"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4"
regex = "1"
select = "0.5"
url = "2.2"
clap = "3.0.0-beta.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"